--- a/aiub1.html
+++ b/aiub1.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<title>About</title>
-    	<link rel="stylesheet" href="file:///C:/Users/USER/Documents/Codes/CSS3/aiub1.css">
+    	<link rel="stylesheet" href="https://saminabi.github.io/Mr.Extinct/aiub1.css">
 </head>
 
 <body>
@@ -19,11 +19,11 @@
 
 	<main>
 		<aside class = "left">
-			<a href="https://commons.wikimedia.org/wiki/File%3AUltimate_Frisbee%2C_Jul_2009_-_17.jpg"><img src="file:///C:/Users/USER/Desktop/3.jfif" alt="Creative Common Ultimate Photo" title="By Ed Yourdon [CC BY-SA 2.0 (http://creativecommons.org/licenses/by-sa/2.0)], via Wikimedia Commons"/> </a>
+			<a href="https://commons.wikimedia.org/wiki/File%3AUltimate_Frisbee%2C_Jul_2009_-_17.jpg"><img src="https://saminabi.github.io/Mr.Extinct/image/3.jfif" alt="Creative Common Ultimate Photo" title="By Ed Yourdon [CC BY-SA 2.0 (http://creativecommons.org/licenses/by-sa/2.0)], via Wikimedia Commons"/> </a>
 
-			<a href="https://commons.wikimedia.org/wiki/File%3AUltimate_Frisbee_Colorado_Cup_2005.jpg"><img src="file:///C:/Users/USER/Desktop/1.jpg"/></a>
+			<a href="https://commons.wikimedia.org/wiki/File%3AUltimate_Frisbee_Colorado_Cup_2005.jpg"><img src="https://saminabi.github.io/Mr.Extinct/image/1.jpg"/></a>
 
-			<a href="https://www.flickr.com/photos/paradisecoastie/15409853738/" title="Ultimate Frisbee"><img src="file:///C:/Users/USER/Desktop/2.jpg"  alt="Ultimate Frisbee"></a>
+			<a href="https://www.flickr.com/photos/paradisecoastie/15409853738/" title="Ultimate Frisbee"><img src="https://saminabi.github.io/Mr.Extinct/image/2.jpg"  alt="Ultimate Frisbee"></a>
 		</aside>
 
 		<section class = "right">
