--- a/aiub1.html
+++ b/aiub1.html
@@ -10,10 +10,10 @@
 	<header>
 		<h1>American International University Bangladesh</h1>
 		<nav>
-			<a href="file:///C:/Users/USER/Documents/Codes/HTML5/hw2.html">Home</a>
+			<a href="https://saminabi.github.io/Mr.Extinct/aiub1.html">Home</a>
 			<a href="https://saminabi.github.io/Mr.Extinct/aiub1.html" class = "active">About</a>
 			<a href="https://saminabi.github.io/Mr.Extinct/aiub2.html">Academics</a>
-			<a href="http://www.usaultimate.org/index.html" target="_blank">Faculties</a>
+			<a href="https://saminabi.github.io/Mr.Extinct/aiub1.html" target="_blank">Faculties</a>
 		</nav>
 	</header>
 
