--- a/aiub2.html
+++ b/aiub2.html
@@ -42,7 +42,7 @@
 				<tr>
 					<td>Faculty of Science And Technology</td>
 					<td>2000</td>
-					<td>Smrity</td>
+					<td>Saimon</td>
 				</tr>
 				<tr>
 					<td>Faculty of Business Administration</td>
