--- a/aiub3.html
+++ b/aiub3.html
@@ -3,29 +3,32 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Faculties</title>
-    	<link rel="stylesheet" href="file:///C:/Users/USER/Documents/Codes/CSS3/aiub1.css">
+    	<link rel="stylesheet" href="https://saminabi.github.io/Mr.Extinct/aiub1.css">
 </head>
 
 <body>
 	<header>
 		<h1>American International University Bangladesh</h1>
 		<nav>
-			<a href="file:///C:/Users/USER/Documents/Codes/HTML5/hw2.html">Home</a>
-			<a href="file:///C:/Users/USER/Documents/Codes/HTML5/aiub1.html">About</a>
-			<a href="file:///C:/Users/USER/Documents/Codes/HTML5/aiub2.html">Academics</a>
-			<a href="http://www.usaultimate.org/index.html" class = "active">Faculties</a>
-
+				<a href="https://saminabi.github.io/Mr.Extinct/aiub4.html">Home</a>
+				<a href="https://saminabi.github.io/Mr.Extinct/aiub1.html" class = "active">About</a>
+				<a href="https://saminabi.github.io/Mr.Extinct/aiub2.html">Academics</a>
+				<a href="https://saminabi.github.io/Mr.Extinct/aiub3.html" target="_blank">Faculties</a>
 		</nav>
+
 	</header>
 
 	<main>
 		<aside class = "left">
-			<a href="https://commons.wikimedia.org/wiki/File%3AUltimate_Frisbee%2C_Jul_2009_-_17.jpg"><img src="file:///C:/Users/USER/Desktop/3.jfif" alt="Creative Common Ultimate Photo" title="By Ed Yourdon [CC BY-SA 2.0 (http://creativecommons.org/licenses/by-sa/2.0)], via Wikimedia Commons"/> </a>
+				<a href="https://www.aiub.edu/"><img src="https://saminabi.github.io/Mr.Extinct/image/3.jfif" alt="Creative Common Ultimate Photo" title="By Ed Yourdon [CC BY-SA 2.0 (http://creativecommons.org/licenses/by-sa/2.0)], via Wikimedia Commons"/> </a>
+	
 
-			<a href="https://commons.wikimedia.org/wiki/File%3AUltimate_Frisbee_Colorado_Cup_2005.jpg"><img src="file:///C:/Users/USER/Desktop/1.jpg"/></a>
+				<a href="https://www.facebook.com/aiub.edu"><img src="https://saminabi.github.io/Mr.Extinct/image/1.jpg"/></a>
+	
 
-			<a href="https://www.flickr.com/photos/paradisecoastie/15409853738/" title="Ultimate Frisbee"><img src="file:///C:/Users/USER/Desktop/2.jpg"  alt="Ultimate Frisbee"></a>
+				<a href="https://www.aiub.edu/" title="Ultimate Frisbee"><img src="https://saminabi.github.io/Mr.Extinct/image/2.jpg"  alt="Ultimate Frisbee"></a>
 		</aside>
+
 
 		<section class = "right">
 			<h2>DEPARTMENT OF COMPUTER SCIENCE</h2>
