--- a/aiub4.html
+++ b/aiub4.html
@@ -33,7 +33,7 @@
 		<section class = "right">
       <h2>For More detail Contact Us Here</h2>
       <p>Our official website</p>
-    <a href="https://www.aiub.edu/"><img src="file:///C:/Users/USER/Desktop/3.jfif"></a>
+    <a href="https://www.aiub.edu/"><img src="https://github.com/SamiNabi/Mr.Extinct/image/e.jfif"></a>
 
 		</section>
 	</main>
