--- a/aiub4.html
+++ b/aiub4.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>Faculties</title>
+	<title>Home</title>
     	<link rel="stylesheet" href="https://saminabi.github.io/Mr.Extinct/aiub1.css">
 </head>
 
@@ -10,8 +10,8 @@
 	<header>
 		<h1>American International University Bangladesh</h1>
 		<nav>
-				<a href="https://saminabi.github.io/Mr.Extinct/aiub4.html">Home</a>
-				<a href="https://saminabi.github.io/Mr.Extinct/aiub1.html" class = "active">About</a>
+				<a href="https://saminabi.github.io/Mr.Extinct/aiub4.html"class = "active">Home</a>
+				<a href="https://saminabi.github.io/Mr.Extinct/aiub1.html">About</a>
 				<a href="https://saminabi.github.io/Mr.Extinct/aiub2.html">Academics</a>
 				<a href="https://saminabi.github.io/Mr.Extinct/aiub3.html" target="_blank">Faculties</a>
 		</nav>
@@ -33,7 +33,7 @@
 		<section class = "right">
       <h2>For More detail Contact Us Here</h2>
       <p>Our official website</p>
-    <a href="https://www.aiub.edu/"><img src="https://github.com/SamiNabi/Mr.Extinct/image/e.jfif"></a>
+    <a href="https://www.aiub.edu/"><img src="https://saminabi.github.io/Mr.Extinct/image/AIUB.jpeg"></a>
 
 		</section>
 	</main>
