--- a/aiub4.html
+++ b/aiub4.html
@@ -10,10 +10,10 @@
 	<header>
 		<h1>American International University Bangladesh</h1>
 		<nav>
-				<a href="https://saminabi.github.io/Mr.Extinct/aiub4.html"class = "active">Home</a>
+				<a href="https://saminabi.github.io/Mr.Extinct/aiub4.html" class ="active" >Home</a>
 				<a href="https://saminabi.github.io/Mr.Extinct/aiub1.html">About</a>
 				<a href="https://saminabi.github.io/Mr.Extinct/aiub2.html">Academics</a>
-				<a href="https://saminabi.github.io/Mr.Extinct/aiub3.html" target="_blank">Faculties</a>
+				<a href="https://saminabi.github.io/Mr.Extinct/aiub3.html">Faculties</a>
 		</nav>
 
 	</header>
@@ -33,7 +33,7 @@
 		<section class = "right">
       <h2>For More detail Contact Us Here</h2>
       <p>Our official website</p>
-    <a href="https://www.aiub.edu/"><img src="https://saminabi.github.io/Mr.Extinct/image/AIUB.jpeg"></a>
+    <a href="https://www.aiub.edu/"><img src="https://saminabi.github.io/Mr.Extinct/image/3.jfif" alt="Creative Common Ultimate Photo" title="By Ed Yourdon [CC BY-SA 2.0 (http://creativecommons.org/licenses/by-sa/2.0)], via Wikimedia Commons"/> </a>
 
 		</section>
 	</main>
